# stream-hub

./: .gitignore  README.md  README.txt  douyu_extract_playurl.js  douyu_search_streamers.js  douyu_to_mpv.py  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: bundle-libmpv-runtime.mjs  prepare-libmpv-runtime.mjs  sign-macos-app.mjs
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: douyin_frontier_sign.js  douyin_live_helper.js  douyu_danmaku_bridge.js
src-tauri/resources/iina-plugin-danmaku/: Info.json  main.js  overlay.html
src-tauri/src/: lib.rs  main.rs
src-tauri/src/player/: macos.rs  mod.rs  unsupported.rs  windows.rs
