[package]
name = "stream-hub"
version = "0.1.0"
description = "Stream Hub desktop app"
authors = ["liushihao"]
edition = "2021"

[lib]
name = "stream_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
md5 = "0.8"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = [] }
tokio = { version = "1", features = ["io-util", "net", "process", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
